modification index.html

--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
             ],
             2025: [
                 "Atelier EVCA",
-                "Validation données EVCA et cartographie de vulnerabilité",
+                "Validation EVCA et cartographie",
                 "Formation des volontaires CRM sur le Changement climatique",
                 "Atelier elaboration PUC",
                 "Atelier validation PUC",
@@ -268,6 +268,52 @@
 <a class="file-link" href="SaiseFlipEVCA_3eme vague.xlsx" download>
  SaiseFlipEVCA_3eme_vague.xlsx
 </a>
+`,
+            "2025-1": `
+    <p>d </p>Ateliers ménés avec les membres de CDGRC, CCGRC et les chefs fokontany.
+    <div class="row">
+     <table>
+         <tr><th>DISTRICT</th><th>COMMUNE</th><th>Fichier de validation</th></tr>
+         <tr><td>ANALALAVA</td><td>ANKARAMY BE</td><td><a class="file-link" href="Validation_com_EVCA_Ankaramy_be.xlsx" download>
+ Validation_com_EVCA_Ankaramy_be.xlsx
+</a></td></tr>
+<tr><td>ANALALAVA</td><td>BEFOTAKA NORD</td><td><a class="file-link" href="Validation_com_EVCA_Befotaka-Nord.xlsx" download>
+ Validation_com_EVCA_Befotaka-Nord.xlsx
+</a></td></tr>
+<tr><td>ANALALAVA</td><td>MAROMANDIA</td><td><a class="file-link" href="Validation_com_EVCA_Maromandia.xlsx" download>
+Validation_com_EVCA_Maromandia.xlsx</td></tr>
+     <tr><td>ANALALAVA</td><td>MAROVANTAZA</td><td><a class="file-link" href="Validation_com_EVCA_Marovantaza.docx" download>
+Validation_com_EVCA_Marovantaza.docx</td></tr>
+     <tr><td>ANTSOHIHY</td><td>AMBODIMADIRO</td><td><a class="file-link" href="Validation_com_EVCA_Ambodimadiro.xlsx" download>
+Validation_com_EVCA_Ambodimadiro.xlsx</td></tr>
+     <tr><td>ANTSOHIHY</td><td>AMBODIMANDRESY</td><td><a class="file-link" href="Validation_com_EVCA_Ambodimandresy.docx" download>
+Validation_com_EVCA_Ambodimandresy.docx</td></tr>
+     <tr><td>ANTSOHIHY</td><td>AMPANDRIAKILANDY</td><td><a class="file-link" href="Validation_com_EVCA_Ampandriakilandy.docx" download>
+Validation_com_EVCA_Ampandriakilandy.docx</td></tr>
+     <tr><td>ANTSOHIHY</td><td>ANDREBA</td><td><a class="file-link" href="Validation_com_EVCA_Andreba.xlsx" download>
+Validation_com_EVCA_Andreba.xlsx</td></tr>
+     <tr><td>ANTSOHIHY</td><td>ANJIAMANGIRANA</td><td><a class="file-link" href="Validation_com_EVCA_Anjiamangirana.docx" download>
+Validation_com_EVCA_Anjiamangirana.docx</td></tr>
+     <tr><td>ANTSOHIHY</td><td>ANKERIKA</td><td><a class="file-link" href="Validation_com_EVCA_Ankerika.docx" download>
+Validation_com_EVCA_Ankerika.docx</td></tr>
+     <tr><td>ANTSOHIHY</td><td>ANTSAHABE</td><td><a class="file-link" href="Validation_com_EVCA_Antsahabe.docx" download>
+Validation_com_EVCA_Antsahabe.docx</td></tr>
+     <tr><td>ANTSOHIHY</td><td>ANTSOHIHY</td><td><a class="file-link" href="Validation_com_EVCA_Antsohihy.docx" download>
+Validation_com_EVCA_Antsohihy.docx</td></tr>
+     <tr><td>MAMPIKONY</td><td>AMBOHITOAKA</td><td><a class="file-link" href="Validation_com_EVCA_Ambohitoaka.docx" download>
+Validation_com_EVCA_Ambohitoaka.docx</td></tr>
+     <tr><td>MAMPIKONY</td><td>MAMPIKONY I</td><td><a class="file-link" href="Validation_com_EVCA_Mampikony-I.docx" download>
+Validation_com_EVCA_Mampikony-I.docx</td></tr>
+     <tr><td>MAMPIKONY</td><td>MAMPIKONY II</<td><td><a class="file-link" href="Validation_com_EVCA_Mampikony-II.docx" download>
+Validation_com_EVCA_Mampikony-II.docx</td></tr>
+     <tr><td>PORT BERGÉ</td><td>AMPARIHY</td><td><a class="file-link" href="Validation_com_EVCA_Amparihy.docx" download>
+Validation_com_EVCA_Amparihy.docx</td></tr>
+     <tr><td>PORT BERGÉ</td><td>PORT BERGÉ II</td><td><a class="file-link" href="Validation_com_EVCA_PortBerge-II.docx" download>
+Validation_com_EVCA_PortBerge-II.docx</td></tr>
+     <tr><td>PORT BERGÉ</td><td>TSARAHASINA</td><td><a class="file-link" href="Validation_com_EVCA_Tsarahasina.docx" download>
+Validation_com_EVCA_Tsarahasina.docx</td></tr>
+         
+           </table> 
 `,
         };
 
