--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             margin: 0;
             font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif, sans-serif;
             background-color: rgb(247, 247, 243);
-            background-image: url("images/fond.jpg");
+            background-image: url("images/fond.png");
             background-size: cover;
             height: 800px;
             font-size: small;
@@ -226,7 +226,7 @@
     <p>No information.</p>
   `,
             "2025-0": `
-    <p>d </p>Ateliers ménés dans les 19 chefs lieux de commune.
+    <p>d </p> Ateliers ménés dans les 19 chefs lieux de commune.
     <div class="row">
      <table>
          <tr><th>DISTRICT</th><th>COMMUNE</th><th>Nbr FOKONTANY</th></tr>
@@ -274,7 +274,7 @@
  SaisieInterviewEVCA
 </a>
 <br>
-<a class="file-link" href=" fichiers/SaiseEVCA_Maromandia.xlsx" download>
+<a class="file-link" href="fichiers/SaiseEVCA_Maromandia.xlsx" download>
  SaiseEVCA_Maromandia
 </a>
 <br>
@@ -291,7 +291,7 @@
 </a>
 `,
             "2025-1": `
-    <p>d </p>Ateliers ménés avec les membres de CDGRC, CCGRC et les chefs fokontany.
+    <p>d</p>Ateliers ménés avec les membres de CDGRC, CCGRC et les chefs fokontany.
     <div class="row">
      </div>
          
@@ -352,7 +352,7 @@ Validation_com_EVCA_PortBerge-II </a>
 Validation_com_EVCA_Tsarahasina </a>         
            `,
             "2025-2": `
-    <p>d </p>Formation relaisée à Analalava par equipe centrale et Climate center pour les 24 volontaires CRM/Sofia
+    <p>d</p> Formation relaisée à Analalava par equipe centrale et Climate center pour les 24 volontaires CRM/Sofia.
     <br> Avant cette activité 4 volontaires (1 par district: Nico, Rindra, Anicette, Ferdinande), 3 staffs ACACIA/Sofia,DR Meteo Sofia et des equipes de la DGM centrale
     ont beneficié à Tana, la formation sur le changement climatique et actions preparatoires, par deux equipes du Climate center.
     <br>Ci-dessous la liste des outils:
