--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             margin: 0;
             font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif, sans-serif;
             background-color: rgb(247, 247, 243);
-            background-image: url("images/fond.png");
+            background-image: url("images/fond.PNG");
             background-size: cover;
             height: 800px;
             font-size: small;
@@ -426,5 +426,6 @@ Validation_com_EVCA_Tsarahasina </a>
 </body>
 
 </html>
+
 
 </html>
